--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* ===================== GLOBAL STYLES ===================== */
+
 * {
   margin: 0;
   padding: 0;
@@ -173,6 +173,18 @@ nav ul li a:hover::after {
   font-size: 18px;
 }
 
+
+
+/*===================family=======================*/
+.fam1 img{
+  height: 50%;
+  width: fit-content;
+}
+
+
+
+
+
 /* ===================== SERVICES ===================== */
 #services {
   background: #121212;
@@ -211,6 +223,82 @@ nav ul li a:hover::after {
   display: inline-block;
   margin-top: 15px;
 }
+
+/*====================Challenges==================*/
+.or {
+  font-size: 36px;
+  font-weight: bold;
+  color: bisque;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+
+.sub-title {
+  font-size: 36px;
+  font-weight: bold;
+  color: bisque;
+  margin-bottom: 20px;
+  margin-right: 30px;
+}
+
+.family-section, .challenge-section {
+  background-color: #111;
+  color: bisque;
+  padding: 60px 20px;
+}
+
+.family-cards {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.family-card {
+  background-color: #222;
+  padding: 20px;
+  border-left: 5px solid crimson;
+  border-radius: 10px;
+}
+
+.challenge-card {
+  background-color: #222;
+  border-left: 5px solid #007bff;
+  padding: 20px;
+  margin-top: 20px;
+  border-radius: 10px;
+}
+
+nav ul {
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 15px;
+  padding: 0;
+}
+
+nav ul li a {
+  text-decoration: none;
+  color: bisque;
+  font-weight: bold;
+  transition: color 0.3s;
+}
+
+nav ul li a.active,
+nav ul li a:hover {
+  color: #00ffff;
+}
+
+
+
+
+
+
+
+
+
+
 
 /* ===================== PORTFOLIO ===================== */
 #portfolio {
@@ -406,11 +494,11 @@ nav .fas {
 }
 
 .resume-box:hover {
-  background-color: #ff004f;
+  background-color: #754879;
 }
 
 .resume-box:hover a {
-  color: #fff;
+  color: #503434;
 }
 .resume-box {
   background-color: #e6a2a2;
